--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -60,10 +60,10 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
     <Header />
     <main>
       <article>
-        <div class="hero-image">
+        <div class="hero-image overflow-hidden w-[1020px] h-[510px]">
           {
             heroImage && (
-              <Image width={1020} height={510} src={heroImage} alt="" />
+              <Image width={1020} height={510} src={heroImage} alt="" class="object-cover"/>
             )
           }
         </div>
