--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,14 +86,16 @@ const posts = (await getBlogCollection(Astro.url)).sort(
   <body>
     <Header />
     <main>
-      <h1>History in the Digital</h1>
+      <h1>History in Archives</h1>
       <p>
         I'm Trey Pendragon! I work with a team who dreams of making it normal
-        for everyone to engage with history that's made every day for new and
+        for anyone to engage with history that's made every day for new and
         fun discoveries. To see how we can do that I've started this little blog
         where every week I'll find a single object that catches my eye and see
         what I can learn about it, then reflect on what would have made that
-        journey more pleasant. I hope this is fun!
+        journey more pleasant. The posts are stream of consciousness from a
+        person who speaks one language, dropped out of college, and still loves
+        to learn new things about the world. I hope this is fun!
       </p>
       <section>
         <ul>
