--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,9 +5,9 @@ import HeaderLink from "./HeaderLink.astro";
 
 <header>
   <nav>
-    <h2><a href="/">{SITE_TITLE}</a></h2>
+    <h2><a href="./">{SITE_TITLE}</a></h2>
     <div class="internal-links">
-      <HeaderLink href="/">Home</HeaderLink>
+      <HeaderLink href="./">Home</HeaderLink>
     </div>
   </nav>
 </header>
