--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -14,6 +14,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 
 <html lang="en">
   <head>
+    <base href={import.meta.env.BASE_URL} />
     <BaseHead title={title} description={description} />
     <style>
       main {
